[features]  # defines the plugin features contained into this plugin
instruments = true  # true if plugin contains instrument classes (else false, notice the lowercase for toml files)
extensions = false  # true if plugins contains dashboard extensions
models = false  # true if plugins contains pid models
h5exporters = false  # true if plugin contains custom h5 file exporters
scanners = false  # true if plugin contains custom scan layout (daq_scan extensions)

[urls]
package-url = 'https://github.com/PyMoDAQ/pymodaq_plugins_keithley'

[project]
name = "pymodaq_plugins_keithley"
description = 'Set of PyMoDAQ plugins for various physical measurements from keithley'
dependencies = [
    "pymodaq>=5.0.0",
    "pyvisa",
    "pyvisa-py",
    "pymeasure",
    "pyusb",
    "zeroconf"
]

authors = [
    {name = "Sébastien Weber", email = "sebastien.weber@cnrs.fr"},
    {name = "Nicolas Bruyant", email = "nicolas.bruyant@lncmi.cnrs.fr"},
    {name = "Sébastien Guerrero", email = "sebastien.guerrero@insa-lyon.fr"},
    {name = "Loïc Guilmard", email = "loic.guilmard@insa-lyon.fr"},
    {name = "Anthony Buthod", email = "anthony.buthod@insa-lyon.fr"},
    {name = "Arnaud Meyer", email = "arnaud.meyer@univ-st-etienne.fr"},
]
maintainers = [
    {name = "Sébastien Weber", email = "sebastien.weber@cnrs.fr"},
]

# nottodo: leave everything below as is!

dynamic = ["version", "urls", "entry-points"]
readme = "README.rst"
license = { file="LICENSE" }
requires-python = ">=3.8"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
]

[build-system]
requires = [
    "hatchling>=1.9.0",
    "hatch-vcs", "toml",
    "pymodaq_utils>=0.0.6",
]
build-backend = "hatchling.build"

[tool.hatch.metadata.hooks.custom]

[tool.hatch.version]
source = "vcs"

